# permissions

./: Cargo.toml
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: lib.rs
src/: android.rs  ios.rs  lib.rs
