[package]
name = "permissions"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.4.0", features = ["native-activity"] }
jni = "0.21.0"
ndk-context = "0.1.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"

[package.metadata.docs.rs]
targets = ["aarch64-apple-ios", "aarch64-linux-android"]
